src1/server/docker/k8s/25-jenkins/01_installJenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      nodeSelector:
        io.suggest.jenkins.here: "true"
      containers:
      - name: jenkins-cont01
        image: docker-registry.suggest.io/sio/sio2/jenkins:latest
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - mountPath: /var/lib/jenkins
          name: var-lib-jenkins
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: var-lib-jenkins
        hostPath:
          path: /var/lib/containers/jenkins
          type: DirectoryOrCreate
