src1/server/docker/k8s/25-jenkins/10_installRegistySvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  type: ClusterIP
  selector:
    "io.suggest.svc.type": "jenkins"
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: webgui
  - protocol: TCP
    port: 50000
    targetPort: 50000
    name: agent
